SERVER-7300 Race Condition in FailPoint::setMode